--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "vite",
     "deploy": "npm publish",
-    "build-style": "sass src/styles/theme:src --no-source-map",
-    "build": "tsc -b && vite build && npm run build-style && cp src/theme.css dist/",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "start:storybook": "storybook dev -p 6006",
+    "build:style": "sass src/styles/theme:src --no-source-map",
+    "build:package": "tsc -b && vite build && npm run build:style && cp src/theme.css dist/",
+    "build:storybook": "storybook build"
   },
   "dependencies": {
     "glob": "^13.0.0",
