feat: ajuste nos scripts

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "drogal.internal.ui",
   "private": false,
-  "version": "0.0.17",
+  "version": "0.0.18",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "deploy": "npm publish",
+    "dev": "storybook dev -p 6006",
     "start:storybook": "storybook dev -p 6006",
     "build:style": "sass src/styles/theme:src --no-source-map",
     "build:package": "tsc -b && vite build && npm run build:style && npm run build:icons && node scripts/copy-css.js",
